# Natural-Language-Processing

./: Bacon.txt  Disease_recognition_in_Spanish.ipynb  Extract_text_from_PDF_to_JSON.ipynb  Extract_text_from_PDF_to_JSONL.ipynb  NER_Finetuning_HuggingFace_model.ipynb  README.md  Romeo_Juliett.txt  autonomous_LLM_GPT4all_Vicuna-13b.ipynb  chatgpt_conversation.py  disease_recognition_in_Spanish.ipynb  disease_recognition_in_Spanish_using_spaCy_ruler.ipynb  documents_similarity.py  pyproject.toml  requirements.txt  simple_sentinel_analysis.py  swear_words_filter_testing.ipynb  textblob_study.ipynb  word_frequency_barchart_wordcloud.py
Input/: Hamlet.txt  Listado_enfermedades_CIE-10.csv  Pride_and_Prejudice.txt  The-lord-of-the-rings.pyMuPDF.json
Output/: The-lord-of-the-rings.eng.json  The-lord-of-the-rings.pdfplumber.json  The-lord-of-the-rings.pyMuPDF.json  Wells_The-time-machine.pdfplumber.json  Wells_The-time-machine.pyMuPDF.json  Wells_The-time-machine.pyPDF.json
