[tool.poetry]
name = "old-fashion-nlp"
version = "0.1.0"
description = "various old-fashion NLP tasks (without LLMs)"
authors = ["Konstantin Kuteykin <konstantin.kuteykin@upf.edu>"]
readme = "README.md"
packages = [{include = "old_fashion nlp"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
textblob = "^0.17.1"
nltk = "^3.8.1"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
imageio = "^2.31.1"
wordcloud = "^1.9.2"
spacy = "3.6.0"
torch = "^2.0.1"
datasets = "^2.13.1"
transformers = "^4.30.2"
seqeval = "^1.2.2"
pdfplumber = "^0.10.2"
pymupdf = "1.21"
pypdf = "^3.16.2"
spacy-llm = "^0.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
